--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 960452239089.dkr.ecr.us-east-1.amazonaws.com
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/w4l9y5r3
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-          docker build -t mediplus:v1 .
-          docker tag mediplus:v1 960452239089.dkr.ecr.us-east-1.amazonaws.com/mediplus:v1
-          docker push 960452239089.dkr.ecr.us-east-1.amazonaws.com/mediplus:v1
+          docker build -t docker-ecr .
+          docker tag docker-ecr:v1 public.ecr.aws/w4l9y5r3/docker-ecr:v1
+          docker push public.ecr.aws/w4l9y5r3/docker-ecr:v1
 
