--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-          docker build -t docker-ecr .
+          docker build -t docker-ecr:v1 .
           docker tag docker-ecr:v1 public.ecr.aws/w4l9y5r3/docker-ecr:v1
           docker push public.ecr.aws/w4l9y5r3/docker-ecr:v1
 
