--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,3 +30,14 @@ jobs:
           docker tag docker-ecr:v1 public.ecr.aws/w4l9y5r3/docker-ecr:v1
           docker push public.ecr.aws/w4l9y5r3/docker-ecr:v1
 
+  deploy:
+    runs-on: ubuntu latest
+    needs: build-push
+    steps: 
+      - name: check my ssh key
+        run: |
+          echo "${{ secrets.SSH_KEY }}" > mykey.pem
+          chmod 600 mykey.pem
+          cat mykey.pem
+        
+          
