--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,22 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v2
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Login to Amazon ECR
-      #   run: |
-      #     aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/w4l9y5r3
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/w4l9y5r3
 
-      # - name: Build, tag, and push image to Amazon ECR
-      #   run: |
-      #     docker build -t docker-ecr:v1 .
-      #     docker tag docker-ecr:v1 public.ecr.aws/w4l9y5r3/docker-ecr:v1
-      #     docker push public.ecr.aws/w4l9y5r3/docker-ecr:v1
+      - name: Build, tag, and push image to Amazon ECR
+        run: |
+          docker build -t docker-ecr:v1 .
+          docker tag docker-ecr:v1 public.ecr.aws/w4l9y5r3/docker-ecr:v1
+          docker push public.ecr.aws/w4l9y5r3/docker-ecr:v1
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,4 +40,4 @@ jobs:
           chmod 600 mykey.pem
           cat mykey.pem
         
-          
+        
