--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,10 +26,9 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-          docker build -t docker-ecr:v2 .
-          docker tag docker-ecr:v2 public.ecr.aws/w4l9y5r3/docker-ecr:v2
-          docker push public.ecr.aws/w4l9y5r3/docker-ecr:v2
-
+          docker build -t indomak-ecr .
+          docker tag indomak-ecr:latest public.ecr.aws/w4l9y5r3/indomak-ecr:latest
+          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
