--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,8 +40,8 @@ jobs:
           cat mykey.pem
         
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@204.236.208.78 "docker pull public.ecr.aws/w4l9y5r3/docker-ecr:v2"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@204.236.208.78 "docker run -d -p 80:80 public.ecr.aws/w4l9y5r3/docker-ecr:v2"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@234.224.37.135 "docker run -d -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
 
           
