--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         run: |
           docker build -t indomak-ecr .
-          docker tag indomak-ecr:latest public.ecr.aws/w4l9y5r3/indomak-ecr:latest
-          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:latest
+          docker tag indomak-ecr:v1 public.ecr.aws/w4l9y5r3/indomak-ecr:v1
+          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:v1
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
@@ -40,8 +40,8 @@ jobs:
           cat mykey.pem
         
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:v1"
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:v1"
 
           
