--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-          docker build -t indomak-ecr:v4 .
-          docker tag indomak-ecr:v4 public.ecr.aws/w4l9y5r3/indomak-ecr:v4
-          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:v4
+          docker build -t indomak-ecr:latest .
+          docker tag indomak-ecr:latest public.ecr.aws/w4l9y5r3/indomak-ecr:latest
+          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
@@ -40,7 +40,7 @@ jobs:
           cat mykey.pem
         
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:v4"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr-v4 -p 8083:80 public.ecr.aws/w4l9y5r3/indomak-ecr:v4"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr-latest -p 8083:80 public.ecr.aws/w4l9y5r3/indomak-ecr:latest"
 
