--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,9 +26,10 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-          docker build -t indomak-ecr:v5 .
-          docker tag indomak-ecr:v5 public.ecr.aws/w4l9y5r3/indomak-ecr:v5
-          docker push public.ecr.aws/w4l9y5r3/indomak-ecr:v5
+            TAG=${{ github.run_number }}
+            docker build -t indomak-ecr:${TAG} .
+            docker tag indomak-ecr:${TAG} public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}
+            docker push public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
@@ -40,9 +41,9 @@ jobs:
           cat mykey.pem
         
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:v5"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}"
 
                     ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker rm -f indomak-ecr"
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr-v5 -p 8088:80 public.ecr.aws/w4l9y5r3/indomak-ecr:v5"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}"
 
