--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,10 +26,9 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         run: |
-            TAG=${{ github.run_number }}
-            docker build -t indomak-ecr:${TAG} .
-            docker tag indomak-ecr:${TAG} public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}
-            docker push public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}
+            docker build -t indomak-ecr:${{ github.run_number }} .
+            docker tag indomak-ecr:${{ github.run_number }} public.ecr.aws/w4l9y5r3/indomak-ecr:${{ github.run_number }}
+            docker push public.ecr.aws/w4l9y5r3/indomak-ecr:${{ github.run_number }}
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
@@ -41,11 +40,11 @@ jobs:
           cat mykey.pem
         
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker pull public.ecr.aws/w4l9y5r3/indomak-ecr:${{ github.run_number }}"
 
                     ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker rm -f indomak-ecr"
 
-          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:${TAG}"
+          ssh -o StrictHostKeyChecking=no -i mykey.pem ubuntu@34.224.37.135 "docker run -d --name indomak-ecr -p 80:80 public.ecr.aws/w4l9y5r3/indomak-ecr:${{ github.run_number }}"
 
 
           
